update pci_enable_device_mem and dkms.conf

--- a/root/usr/src/iomemory-vsl4-4.3.7/dkms.conf
+++ b/root/usr/src/iomemory-vsl4-4.3.7/dkms.conf
@@ -1,8 +1,8 @@
-MAKE="'make' DKMS_KERNEL_VERSION=$kernelver"
-CLEAN="'make' clean"
-BUILT_MODULE_NAME=iomemory-vsl4
-BUILT_MODULE_LOCATION=''
+MAKE[0]="make module VERSION_STRING=4.3.7.1-joshu"
+CLEAN="make clean"
+BUILT_MODULE_NAME[0]="iomemory-vsl4"
+BUILT_MODULE_LOCATION[0]=""
 PACKAGE_NAME=iomemory-vsl4
-PACKAGE_VERSION=4.3.7.1
-DEST_MODULE_LOCATION=/kernel/drivers/block
-AUTOINSTALL="Yes"
+PACKAGE_VERSION="4.3.7.1-joshu"
+DEST_MODULE_LOCATION[0]="/updates/dkms"
+AUTOINSTALL="yes"
