--- a/dkms.conf
+++ b/dkms.conf
@@ -4,5 +4,5 @@ BUILT_MODULE_NAME[0]="iomemory-vsl4"
 BUILT_MODULE_LOCATION[0]="src"
 DEST_MODULE_LOCATION[0]="/updates/dkms"
 AUTOINSTALL="yes"
-MAKE[0]="make -C ${dkms_tree}/${PACKAGE_NAME}/${PACKAGE_VERSION}/build module"
-CLEAN="make -C ${dkms_tree}/${PACKAGE_NAME}/${PACKAGE_VERSION}/build clean"
+MAKE[0]="make -C src -j$(nproc)"
+CLEAN="make -C src clean"
