--- a/src/Makefile
+++ b/src/Makefile
@@ -1,1 +1,11 @@
+# src/Makefile
 obj-m := iomemory-vsl4.o
+
+KDIR := /lib/modules/$(KERNELRELEASE)/build
+PWD := $(shell pwd)
+
+all:
+	$(MAKE) -C $(KDIR) M=$(PWD) modules
+
+clean:
+	$(MAKE) -C $(KDIR) M=$(PWD) clean
