--- a/src/Makefile
+++ b/src/Makefile
@@ -1,6 +1,6 @@
 obj-m := iomemory-vsl4.o
 
-EXTRA_CFLAGS += -I$(PWD)/include -I$(PWD)/include/fio -I$(PWD)/include/fio/port
+EXTRA_CFLAGS += -I$(PWD)/include -I$(PWD)/include/fio -I$(PWD)/include/fio/port -I$(PWD)/include/fio/port/linux
 
 KDIR := /lib/modules/$(KERNELRELEASE)/build
 PWD := $(shell pwd)
